<resources>
    <string name="app_name">Do_I_Need_It</string>
    <string name="full_name_hint">Full Name</string>
    <string name="email_hint">Email</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="password_hint">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account? Register Here</string>
    <string name="sign_up_btn_txt">Sign Up</string>
    <string name="sign_in_btn_txt">Sign In</string>
    <string name="profile_link">Profile</string>
    <string name="my_items_link">My Items</string>
    <string name="help_link">Help</string>
    <string name="settings_link">Settings</string>
    <string name="add_new_item_to_products">Add new item to products</string>
    <string name="add_a_new_product">Add a new product</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="country">Country</string>
    <string name="personal_information">Personal Information</string>
    <string name="edit_profile_button">Edit profile button</string>
    <string name="calendar_icon">calendar icon</string>
    <string name="phone_icon">phone icon</string>
    <string name="location_icon">location icon</string>
    <string name="product_summary">Product Summary</string>
    <string name="products">Products</string>
    <string name="bought">Bought</string>
    <string name="discarded">Discarded</string>
    <string name="money_spent_vs_money_saved">Money Spent vs Money Saved</string>
    <string name="dollar_sign">dollar sign</string>
    <string name="add_new_product">Add New Product</string>
    <string name="title">Product Title</string>
    <string name="website_url">Website URL</string>
    <string name="price">Product Price</string>
    <string name="image">Image</string>
    <string name="location">Location</string>
    <string name="add">Add</string>
    <string name="add_product">Add Product</string>
    <string name="x">X</string>
    <string name="products_link">Products</string>
    <string name="mapbox_access_token">MAPBOX_ACCESS_TOKEN</string>
    <string name="logout">Logout</string>
    <string name="product_details">Product Details</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="save_changes">Save Changes</string>
    <string name="add_image">Add Image</string>
    <string name="purchased">PURCHASED</string>
    <string name="application_details">Application Details</string>
    <string name="adding_a_product_to_think_about">Adding a Product to Think About</string>
    <string name="add_profile_image">Add Profile Image</string>
    <string name="phone_number">Phone Number</string>
    <string name="to_manage_product">To manage the products you have added to think about, navigate to the second navigation link marked by a shooping cart (Products). On this screen, you may swipe a product left to delete/forget a product. Alternaively, you may tap on the product you wish to manage and edit it\'s details or mark purchased or delete.</string>
    <string name="to_share_product">To share a product as part of your wishlist, tap on the specific item you wish to share and press the share button located at the top right hand corner of the products image.</string>
    <string name="app_details">Do I Need It? helps you check your spending habits and not buy impulsively in today\'s climate of hassle free e-commerce shopping. Find out how much money you spent vs how much you saved by using this application give you time to carefully consider whether you really need to purchase an item.</string>
    <string name="add_product_details">To add a new product to think about, simply tap on the add button located at the centre of bottom navigation bar. Once you do this, aa add product dialog appears which alows you to enter the product details and attach an image to save it.</string>
</resources>