<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#121212">

    <EditText
        android:id="@+id/prodTitle"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:background="@drawable/rounded_border"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textSize="13sp"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="100dp" />

    <EditText
        android:id="@+id/prodWebsite"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:background="@drawable/rounded_border"
        android:ems="10"
        android:hint="@string/website_url"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textSize="13sp"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="163dp" />

    <EditText
        android:id="@+id/prodPrice"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:background="@drawable/rounded_border"
        android:ems="10"
        android:hint="@string/price"
        android:inputType="number"
        android:padding="10dp"
        android:textSize="13sp"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="227dp" />

    <EditText
        android:id="@+id/prodImage"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginStart="86dp"
        android:layout_marginLeft="86dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="173dp"
        android:layout_marginRight="173dp"
        android:background="@drawable/rounded_border"
        android:ems="10"
        android:hint="@string/image"
        android:inputType="textPersonName"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prodPrice" />

    <EditText
        android:id="@+id/prodLocation"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginStart="86dp"
        android:layout_marginLeft="86dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="173dp"
        android:layout_marginRight="173dp"
        android:background="@drawable/rounded_border"
        android:ems="10"
        android:hint="@string/location"
        android:inputType="textPersonName"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/prodImage" />

    <Button
        android:id="@+id/addBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        tools:layout_editor_absoluteX="207dp"
        tools:layout_editor_absoluteY="438dp" />

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Exit"
        tools:layout_editor_absoluteX="68dp"
        tools:layout_editor_absoluteY="438dp" />


</androidx.constraintlayout.widget.ConstraintLayout>